final editorial pass

--- a/docs/components/control/authenticate-with-callback.mdx
+++ b/docs/components/control/authenticate-with-callback.mdx
@@ -140,37 +140,9 @@ export default App;
 
 ## Props
 
-<Tables
-  headings={['Name', 'Type', 'Description']}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        'afterSignInUrl',
-        'string',
-        'Full URL or path to navigate after successful sign in.'
-      ]
-    },
-    {
-      cells: [
-        'afterSignUpUrl',
-        'string',
-        'Full URL or path to navigate after successful sign up.'
-      ]
-    },
-    {
-      cells: [
-        'redirectUrl',
-        'string',
-        'Full URL or path to navigate after successful sign in or sign up. \n\n This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value.'
-      ]
-    },
-    {
-      cells: [
-        'secondFactorUrl',
-        'string',
-        'Full URL or path to navigate during sign in, if 2FA is enabled.'
-      ]
-    }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `afterSignInUrl` | `string` | Full URL or path to navigate after successful sign in. | 
+| `afterSignUpUrl` | `string` | Full URL or path to navigate after successful sign up. | 
+| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up. This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `secondFactorUrl` | `string` | Full URL or path to navigate during sign in, if 2FA is enabled. | 
