--- a/docs/components/control/multi-session.mdx
+++ b/docs/components/control/multi-session.mdx
@@ -12,7 +12,7 @@ The `<MultisessionAppSupport />` provides a wrapper for your React application t
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix']}>
+<Tabs items={['Next.js', 'React']}>
 <Tab>
 ```tsx copy filename="pages/_app.tsx"
 import "@/styles/globals.css";
