--- a/docs/components/customization/variables.mdx
+++ b/docs/components/customization/variables.mdx
@@ -49,7 +49,7 @@ import { ClerkProvider } from '@clerk/nextjs';
   cells: [
   <code>colorAlphaShaded</code>,
   <code>string</code>,
-  "The color that will be used for all to generate the alpha shades the components use. /n This option applies to borders, backgrounds for hovered elements, hovered dropdown options",
+  "The color that will be used for all to generate the alpha shades the components use. This option applies to borders, backgrounds for hovered elements, hovered dropdown options",
   ],
   },
   {
