--- a/docs/deployments/migrate-overview.mdx
+++ b/docs/deployments/migrate-overview.mdx
@@ -17,12 +17,13 @@ Migrating from another auth platform? Here's a few guides on how to move your us
             link="/docs/deployments/migrate-from-firebase"
             cta="Learn more"
         />
-        <Cards
+        {/* TODO: Uncomment when Supabase migration guide is created */}
+        {/* <Cards
             title="Supabase"
             description="Learn how to migrate from Supabase to Clerk quickly and easily."
             link="#"
             cta="Coming Soon"
             hideArrow={true}
-        />
+        /> */}
     </div>
 </div>
