--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -41,7 +41,7 @@ If you're looking for a more complete example, check out our [Fastify example ap
 
 ### Set environment keys
 
-Below is an example of an .env file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
+Below is an example of an `.env` file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
 
 <InjectKeys>
 
