--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -20,7 +20,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 To use the ClerkJS package, you have two options:
 
-1. Install the package using a package manager like npm or yarn.
+1. Install the package using a package manager, like npm, yarn, or pnpm.
 2. Use the `<script>` tag to load the ClerkJS package from our CDN.
 
 #### Option 1: Install ClerkJS using a package manager
@@ -82,7 +82,7 @@ To use the ClerkJS package, you'll need to initialize the Clerk class with your 
 ```js copy filename="index.js" 
 import Clerk from '@clerk/clerk-js';
 
-const clerkFrontendApi = 'pk_[publishable_key]';
+const clerkFrontendApi = `pk_${{pub_key}}`;
 const clerk = new Clerk(clerkFrontendApi);
 await clerk.load({
   // Set load options here...
@@ -91,7 +91,7 @@ await clerk.load({
 
 ```html copy filename="index.html"
 <script>
-  const clerkFrontendApi = 'pk_[publishable_key]';
+  const clerkFrontendApi = `pk_${{pub_key}}`;
   const frontendApi = '[your-domain].clerk.accounts.dev';
   const version = '@latest';
   const script = document.createElement('script');
@@ -136,7 +136,7 @@ This example uses [the `<UserButton />` component](/docs/references/javascript/c
 
   const userButtonComponent = document.querySelector<HTMLDivElement>('#user-button')!;
 
-  const clerk = new Clerk('{{pub_key}}');
+  const clerk = new Clerk({{pub_key}});
   await clerk.load();
 
   clerk.mountUserButton(userButtonComponent);
@@ -146,7 +146,7 @@ This example uses [the `<UserButton />` component](/docs/references/javascript/c
   <div id="user-button"></div>
   <script>
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', '{{pub_key}}');
+    script.setAttribute('data-clerk-publishable-key', {{pub_key}});
     script.async = true;
     script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
 
