--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -35,7 +35,7 @@ Once you have a Remix application ready, you need to install Clerk's Remix SDK. 
 
 ### Set environment keys
 
-Below is an example of an .env file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
+Below is an example of an `.env` file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
 
 <InjectKeys>
 
@@ -92,7 +92,7 @@ export default function App() {
 If you need to load in additonal data, you can pass your loader directly to the `rootAuthLoader`.
 
 ```tsx filename="app/root.tsx" copy
-//Imports
+// Imports
 
 
 export const loader: LoaderFunction = args => {
@@ -103,7 +103,7 @@ export const loader: LoaderFunction = args => {
   });
 };
 
-// Additonal application code.
+// Additonal application code
 ```
 
 ### Configure ClerkApp
@@ -211,11 +211,11 @@ export default ClerkApp(App);
 If you need to add a custom boundary to your application, you can pass it as an argument to the `ClerkCatchBoundary`.
 
 ```tsx filename="app/root.tsx" copy
-// imports
+// Imports
 
 export const CatchBoundary = ClerkCatchBoundary(YourBoundary);
 
-// additional application code
+// Additional application code
 ```
 
 Clerk offers a set of prebuilt components that you can use to embed sign in, sign up, and other user management functions into your Next.js application. This example uses the `<SignIn/>` and `<SignUp />` components by utlizing Remix routes.
