--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -32,14 +32,13 @@ Creating a Clerk account and using it in your apps can be done in three steps:
 
   Once you've created an account, you'll be redirected to [your Clerk dashboard](https://dashboard.clerk.com/).
 
-  On a freshly created account, you won't have any applications. To create one, press the "Add application" card:
+  On a freshly created account, you won't have any applications. To create one, press the **Add application** card:
 
   {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
 
   <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)", maxWidth: "400px"}}>![An "Add application" card on your dashboard](/docs/images/get-started/add-application.png)</div>
 
-  When the "Add application" card is pressed, you'll be directed to create your `<SignIn />` component and select your preferred
-  auth providers.
+  When the **Add application** card is pressed, you'll be directed to create your `<SignIn />` component and select your preferred auth providers.
 
   {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
 
@@ -55,8 +54,7 @@ Creating a Clerk account and using it in your apps can be done in three steps:
 
   ### Step 3: Spin up a new codebase
 
-  The API keys listed in the dashboard are just the first step to integrating Clerk into your apps. To get the most out
-  of Clerk, check out our "Quickstart" guides:
+  The API keys listed in the dashboard are just the first step to integrating Clerk into your apps. To get the most out of Clerk, check out our "Quickstart" guides:
 
   <div className="container mx-auto my-4">
     <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
@@ -64,17 +62,17 @@ Creating a Clerk account and using it in your apps can be done in three steps:
 
       <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/docs/quickstarts/nextjs" cta="Get Started" icon="/docs/images/logos/nextjs.svg" iconWidth="40" />
 
+      <FrameworkCards title="JavaScript" description="Add authentication and user management to your JavaScript application." link="/docs/quickstarts/javascript" cta="Get started" hideArrow={true} icon="/docs/images/logos/javascript.svg" iconWidth="30" />
+
       <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/docs/quickstarts/remix" cta="Get Started" icon="/docs/images/logos/remix.svg" />
+
+      <FrameworkCards title="Gatsby" description="Integrate user management and authentication into your Gatsby application." link="/docs/quickstarts/gatsby" cta="Get Started" hideArrow={true} icon="/docs/images/logos/gatsby.svg" />
 
       <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/docs/quickstarts/redwood" cta="Get Started" icon="/docs/images/logos/redwood.svg" />
 
       <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/docs/quickstarts/expo" cta="Get Started" icon="/docs/images/logos/expo.svg" />
 
       <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="/docs/quickstarts/fastify" cta="Get Started" icon="/docs/images/logos/fastify.svg" iconWidth="40" />
-
-      <FrameworkCards title="Express.js" description="Add authentication and user management to your Express.js application." link="/docs/quickstarts" cta="Coming Soon" hideArrow={true} icon="/docs/images/logos/express.svg" iconWidth="30" />
-
-      <FrameworkCards title="Ruby / Rails" description="Integrate user management and authentication into your Ruby application." link="/docs/quickstarts" cta="Coming Soon" hideArrow={true} icon="/docs/images/logos/ruby.svg" />
     </div>
   </div>
 </Steps>
