--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -8,7 +8,7 @@ import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 import { ComponentPreviewCards } from "@/components/ComponentPreviewCards";
 
-# Clerk
+# `Clerk`
 
 This is the main entrypoint class for the `@clerk/clerk-js` package. It contains a number of methods and properties for interacting with the Clerk API.
 
@@ -28,7 +28,6 @@ This is the main entrypoint class for the `@clerk/clerk-js` package. It contains
   {cells: [ <code>session</code>, <code><a href="/docs/references/javascript/session">Session</a> | null | undefined</code>, <>The currently active <code><a href="/docs/references/javascript/session">Session</a></code>, which is guaranteed to be one of the sessions in <code>Client.sessions</code>. If there is no active session, this field will be <code>null</code>. If the session is loading, this field will be <code>undefined</code>.</>]},
   {cells: [ <code>user</code>, <code><a href="/docs/references/javascript/user/user">User</a> | null | undefined</code>, <>A shortcut to <code>Session.user</code> which holds the currently active <code>User</code> object. If the session is <code>null</code> or <code>undefined</code>, the user field will match.</>]},
   {cells: [ <code>organization</code>, <code><a href="/docs/references/javascript/organization/organization">Organization</a> | null | undefined</code>, <>A shortcut to the last active <code>Session.user.organizationMemberships</code> which holds an instance of a <code>Organization</code> object. If the session is <code>null</code> or <code>undefined</code>, the user field will match.</>]},
-  {cells: [ <code>frontendApi</code>, <code>string</code>, <>Clerk Frontend API string. <strong>This field is deprecated, use <code>publishableKey</code> instead.</strong></>]},
   {cells: [ <code>publishableKey</code>, <code>string | undefined</code>, <>Clerk Publishable Key string.</>]},
   ]}
 />
