--- a/docs/references/javascript/clerk/handle-navigation.mdx
+++ b/docs/references/javascript/clerk/handle-navigation.mdx
@@ -3,10 +3,6 @@ title: Handle Navigation
 description: These are all methods on the Clerk class that help you handle navigation callbacks from Clerk, usually in conjunction with redirect methods or built urls.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Handle Navigation
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you handle navigation callbacks from Clerk, usually in conjunction with [redirect methods](/docs/references/javascript/clerk/redirect-methods) or [built URLs](/docs/references/javascript/clerk/build-urls).
@@ -42,76 +38,29 @@ Take a look at the function parameters description below for more usage details.
 
 ### Props
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>params</code>,
-  <code><a href="#handle-magic-link-verification-params">HandleMagicLinkVerificationParams</a></code>,
-  <>Allows you to define the URLs where the user should be redirected to on successful verification and:
-  <ul><li>Completed sign in or sign up attempt.</li>
-  <li>Pending sign in or sign up attempt.</li>
+| Name | Type | Description |
+| --- | --- | --- |
+| `params` | [`HandleMagicLinkVerificationParams`](#handlemagiclinkverificationparams) | Allows you to define the URLs where the user should be redirected to on successful verification and:
+  <ul>
+    <li>Completed sign in or sign up attempt.</li>
+    <li>Pending sign in or sign up attempt.</li>
   </ul>
-  If the magic link is successfully verified on another device, there's a callback function parameter that allows custom code execution.</>,
-  ],
-  }
-    ,
-    {
-    cells: [
-    <code>customNavigate</code>,
-    <code>(to: string) {"=>"} Promise{"<"}unknown{">"}</code>,
-    <>Allows you to define a custom navigation function</>,
-    ],
-    }
-  ]}
-/>
+  If the magic link is successfully verified on another device, there's a callback function parameter that allows custom code execution. |
+| `customNavigate` | `(to: string) => Promise<unknown>` | Allows you to define a custom navigation function. |
 
 ### `HandleMagicLinkVerificationParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>redirectUrlComplete</code>,
-  <code>string | undefined</code>,
-  <>Full URL or path to navigate after successful magic link verification on completed sign up or sign in on the same device.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>redirectUrl</code>,
-  <code>string | undefined</code>,
-  <>Full URL or path to navigate after successful magic link verification on the same device, but not completed sign in or sign up.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>onVerifiedOnOtherDevice</code>,
-  <code>{"() => void"}</code>,
-  <>Callback function to be executed after successful magic link verification on another device.</>,
-  ],
-  }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `redirectUrlComplete` | `string | undefined` | Full URL or path to navigate after successful magic link verification on completed sign up or sign in on the same device. |
+| `redirectUrl` | `string \| undefined` | Full URL or path to navigate after successful magic link verification on the same device, but not completed sign in or sign up. |
+| `onVerifiedOnOtherDevice` | `() => void` | Callback function to be executed after successful magic link verification on another device. |
 
 ### Returns
 
-
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}unknown{">"}</code>,
-  <>This method will throw a <code><a href="/docs/references/javascript/types/magic-link-error">MagicLinkError</a></code> if the magic link verification failed or the link expired. Check the error's code property for details.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<unknown>` | This method will throw a [`MagicLinkError`](/docs/custom-flows/magic-links) if the magic link verification failed or the link expired. Check the error's `code` property for details. |
 
 ## `handleRedirectCallback()`
 
@@ -126,41 +75,20 @@ Completes a custom OAuth flow started by calling either [`SignIn.authenticateWit
 
 ### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>params</code>,
-  <code><a href="#handle-o-auth-callback-params">HandleOAuthCallbackParams</a></code>,
-  <>Additional props that define where the user will be redirected to at the end of a successful OAuth flow.</>,
-  ],
-  }
-    ,
-    {
-    cells: [
-    <code>customNavigate</code>,
-    <code>(to: string) {"=>"} Promise{"<"}unknown{">"}</code>,
-    <>Allows you to define a custom navigation function</>,
-    ],
-    }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `params` | [`HandleOAuthCallbackParams`](#handleoauthcallbackparams) | Additional props that define where the user will be redirected to at the end of a successful OAuth flow. |
+| `customNavigate` | `(to: string) => Promise<unknown>` | Allows you to define a custom navigation function. |
 
 ### `HandleOAuthCallbackParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>afterSignUpUrl</code>, <code>string | undefined | null</code>, <>Full URL or path to navigate after successful sign up.</>]},
-{cells: [<code>afterSignInUrl</code>, <code>string | undefined | null</code>, <>Full URL or path to navigate after successful sign in.</>]},
-{cells: [<code>redirectUrl</code>, <code>string | undefined | null</code>, <>Full URL or path to navigate after successful sign in or sign up.<br/>The same as setting afterSignInUrl and afterSignUpUrl to the same value.</>]},
-{cells: [<code>secondFactorUrl</code>, <code>string | undefined</code>, <>Full URL or path to navigate during sign in, if 2FA is enabled.</>]},
-{cells: [<code>continueSignUpUrl</code>, <code>string | undefined | null</code>, <>Full URL or path to navigate after an incomplete sign up.</>]}
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `afterSignUpUrl` | `string \| undefined \| null` | Full URL or path to navigate after successful sign up. |
+| `afterSignInUrl` | `string \| undefined \| null` | Full URL or path to navigate after successful sign in. |
+| `redirectUrl` | `string \| undefined \| null` | Full URL or path to navigate after successful sign in or sign up. <br />The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `secondFactorUrl` | `string \| undefined` | Full URL or path to navigate during sign in, if 2FA is enabled. |
+| `continueSignUpUrl` | `string \| undefined \| null` | Full URL or path to navigate after an incomplete sign up. |
 
 ## `handleUnauthenticated()`
 
