--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -3,10 +3,6 @@ title: <OrganizationSwitcher /> Component
 description: The <OrganizationSwitcher /> component is used to enable the ability to switch between available organizations the user may be part of in your application.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<OrganizationSwitcher />` Component
 
 <Images alt="Organization Switcher Example" width={992} height={568} src="/docs/images/ui-components/component-org_switcher.svg" />
@@ -72,26 +68,10 @@ Render the `<OrganizationSwitcher />` component to an HTML `<div>` element.
 function mountOrganizationSwitcher(node: HTMLDivElement, props?: OrganizationSwitcherProps): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the {"<OrganizationSwitcher />"} component</>
-  ],
-  },
-  {
-  cells: [
-  "props?",
-  <a href="#organization-switcher-props"><code>OrganizationSwitcherProps</code></a>,
-  "The properties to pass to the `<OrganizationSwitcher />` component",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<OrganizationSwitcher />` component |
+| `props?` | [`OrganizationSwitcherProps`](#organization-switcher-props) | The properties to pass to the `<OrganizationSwitcher />` component |
 
 ## `unmountOrganizationSwitcher()`
 
@@ -152,117 +132,23 @@ Unmount and run cleanup on an existing `<OrganizationSwitcher />` component inst
 function unmountOrganizationSwitcher(node: HTMLDivElement): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered {"<OrganizationSwitcher />"} component instance</>
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<OrganizationSwitcher />` component instance |
 
 ## `OrganizationSwitcherProps`
 
 All props below are optional.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>afterCreateOrganizationUrl</code>,
-  <code>string</code>,
-  "Full URL or path to navigate after creating a new organization.",
-  ],
-  },
-  {
-  cells: [
-  <code>appearance</code>,
-  <code>object</code>,
-  "Control the look and feel of the component.",
-  ],
-  },
-  {
-  cells: [
-  <code>createOrganizationUrl</code>,
-  <code>string</code>,
-  <>Full URL or path where the {"<CreateOrganization />"} component is mounted.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>organizationProfileUrl</code>,
-  <code>string</code>,
-  <>Full URL or path where the {"<OrganizationProfile />"} component is mounted.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>createOrganizationMode</code>,
-  <code>'modal' | 'navigation'</code>,
-  <>
-  Controls whether clicking the "Create organization" button will cause
-  the {"<CreateOrganization />"} component to open as a modal, or if the browser will navigate
-  to the <code>createOrganizationUrl</code> where {"<CreateOrganization />"} is mounted as a page.
-  <br/>
-  Defaults to: <code>"modal"</code>
-  </>,
-  ],
-  },
-  {
-  cells: [
-  <code>organizationProfileMode</code>,
-  <code>'modal' | 'navigation'</code>,
-  <>
-  Controls whether clicking the "Manage organization" button will cause
-  the {"<OrganizationProfile />"} component to open as a modal, or if the browser will navigate
-  to the <code>organizationProfileUrl</code> where {"<OrganizationProfile />"} is mounted as a page.
-  <br/>
-  Defaults to: <code>"modal"</code>
-  </>,
-  ],
-  },
-  {
-  cells: [
-  <code>afterLeaveOrganizationUrl</code>,
-  <code>string</code>,
-  <>Full URL or path to navigate to after the user leaves the currently active organization.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>afterSwitchOrganizationUrl</code>,
-  <code>string</code>,
-  <>Full URL or path to navigate after a successful organization switch.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>hidePersonal</code>,
-  <code>boolean</code>,
-  <>
-  By default, users can switch between organization and their personal account.
-  This option controls whether {"<OrganizationSwitcher />"} will include the user's personal account
-  in the organization list. Setting this to `false` will hide the personal account entry,
-  and users will only be able to switch between organizations.
-  <br/>
-  Defaults to: <code>true</code>
-  </>,
-  ],
-  },
-
-  {
-  cells: [
-  <code>defaultOpen</code>,
-  <code>boolean</code>,
-  <>Controls the default state of the {"<OrganizationSwitcher />"}</>,
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
+| `appearance` | `object` | Control the look and feel of the component. |
+| `createOrganizationUrl` | `string` | Full URL or path where the `<CreateOrganization />`component is mounted. |
+| `organizationProfileUrl` | `string` | Full URL or path where the `<OrganizationProfile />` component is mounted. |
+| `createOrganizationMode` | `'modal' \| 'navigation'` | Controls whether clicking the "Create organization" button will cause the `<CreateOrganization />` component to open as a modal, or if the browser will navigate to the `createOrganizationUrl` where `<CreateOrganization />` is mounted as a page. <br />Defaults to: "modal" |
+| `organizationProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the "Manage organization" button will cause the `<OrganizationProfile />` component to open as a modal, or if the browser will navigate to the `organizationProfileUrl` where `<OrganizationProfile />` is mounted as a page. <br />Defaults to: "modal" |
+| `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate to after the user leaves the currently active organization. |
+| `afterSwitchOrganizationUrl` | `string` | Full URL or path to navigate after a successful organization switch. |
+| `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether `<OrganizationSwitcher />` will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations. <br />Defaults to: `true` |
+| `defaultOpen` | `boolean` | Controls the default state of the `<OrganizationSwitcher />` component. |
