--- a/docs/references/javascript/clerk/redirect-methods.mdx
+++ b/docs/references/javascript/clerk/redirect-methods.mdx
@@ -3,10 +3,6 @@ title: Redirect Methods
 description: These are all methods on the Clerk class that help you manage route navigation based on the Clerk dashboard configuration.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Redirect Methods
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you manage route navigation based on the Clerk dashboard configuration.
@@ -21,32 +17,15 @@ Helper method which will use the custom push navigation function of your applica
 
 ### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>to</code>,
-  <code>string | undefined</code>,
-  "The route to navigate to",
-  ],
-  }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `to` | `string \| undefined` | The route to navigate to |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}unknown{">"}</code>,
-  <>A promise that can be <code>await</code>ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<unknown>` | A promise that can be `await`ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within. |
 
 ## `redirectWithAuth()`
 
@@ -59,32 +38,15 @@ Redirects to the provided url after decorating it with the auth token for develo
 
 ### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>to</code>,
-  <code>string | undefined</code>,
-  "The route to navigate to",
-  ],
-  }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `to` | `string \| undefined` | The route to navigate to |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}unknown{">"}</code>,
-  <>A promise that can be <code>await</code>ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<unknown>` | A promise that can be `await`ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within. |
 
 ## `redirectToSignIn()`
 
@@ -97,32 +59,15 @@ Redirects to the sign-in URL, as configured in your Instance settings. This meth
 
 ### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>options</code>,
-  <code><a href="/docs/references/javascript/types/redirect-options">RedirectOptions</a> | undefined</code>,
-  "Options to use in the redirect",
-  ],
-  }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `options` | [`RedirectOptions`](/docs/references/javascript/types/redirect-options) \| `undefined` | Options to use in the redirect |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}unknown{">"}</code>,
-  <>A promise that can be <code>await</code>ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<unknown>` | A promise that can be `await`ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within. |
 
 ## `redirectToSignUp()`
 
@@ -134,32 +79,15 @@ Redirects to the sign-up URL, as configured in your Instance settings. This meth
 
 ### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>options</code>,
-  <code><a href="/docs/references/javascript/types/redirect-options">RedirectOptions</a> | undefined</code>,
-  "Options to use in the redirect",
-  ],
-  }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `options` | [`RedirectOptions`](/docs/references/javascript/types/redirect-options) \| `undefined` | Options to use in the redirect |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}unknown{">"}</code>,
-  <>A promise that can be <code>await</code>ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<unknown>` | A promise that can be `await`ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within. |
 
 
 ## `redirectToUserProfile()`
@@ -172,16 +100,9 @@ Redirects to the user profile management URL, as configured in your Instance set
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}unknown{">"}</code>,
-  <>A promise that can be <code>await</code>ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<unknown>` | A promise that can be `await`ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within. |
 
 ## `redirectToCreateOrganization()`
 
@@ -193,16 +114,9 @@ Redirects to the configured URL where <code><a href="/docs/references/javascript
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}unknown{">"}</code>,
-  <>A promise that can be <code>await</code>ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<unknown>` | A promise that can be `await`ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within. |
 
 ## `redirectToOrganizationProfile()`
 
@@ -214,17 +128,9 @@ Redirects to the configured URL where <code><a href="/docs/references/javascript
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}unknown{">"}</code>,
-  <>A promise that can be <code>await</code>ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within.</>,
-  ]},
-  ]}
-/>
-
+| Type | Description |
+| --- | --- |
+| `Promise<unknown>` | A promise that can be `await`ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within. |
 
 ## `redirectToHome()`
 
@@ -236,13 +142,6 @@ Redirects to your app's homepage, as configured in your Instance settings. This 
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}unknown{">"}</code>,
-  <>A promise that can be <code>await</code>ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<unknown>` | A promise that can be `await`ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within. |
