--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -3,10 +3,6 @@ title: <UserButton /> Component
 description: The <UserButton /> component is used to render the familiar user button UI popularized by Google.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<UserButton />` Component
 
 <Images width={496} height={564} src="/docs/images/ui-components/component-user_button.svg" alt="User Button Example" />
@@ -72,26 +68,10 @@ Render the `<UserButton />` component to an HTML `<div>` element.
 function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the {"<UserButton />"} component</>
-  ],
-  },
-  {
-  cells: [
-  "props?",
-  <a href="#user-button-props"><code>UserButtonProps</code></a>,
-  "The properties to pass to the `<UserButton />` component",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<UserButton />` component |
+| `props?` | [`UserButtonProps`](#user-button-props) | The properties to pass to the `<UserButton />` component |
 
 ## `unmountUserButton()`
 
@@ -152,97 +132,23 @@ Unmount and run cleanup on an existing `<UserButton />` component instance.
 function unmountUserButton(node: HTMLDivElement): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered {"<UserButton />"} component instance</>
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered {"<UserButton />"} component instance. |
 
 ## `UserButtonProps`
 
 All props below are optional.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [<code>appearance</code>, <code>object</code>, `Controls the overall look and feel.`],
-  },
-  {
-  cells: [
-  <code>showName</code>,
-  <code>string</code>,
-  `Controls if the user name is displayed next to the user image button.`,
-  ],
-  },
-  {
-  cells: [
-  <code>signInUrl</code>,
-  <code>string</code>,
-  `The full URL or path to navigate to when the "Add another account" button is clicked.`,
-  ],
-  },
-  {
-  cells: [
-  <code>userProfileMode</code>,
-  <code>"modal" | "navigation"</code>,
-  <>Controls whether clicking the "Manage your account" button will cause the {"<UserProfile />"} component to open as a modal, or if the browser will navigate to the <code>userProfileUrl</code> where {"<UserProfile />"} is mounted as a page.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>userProfileUrl</code>,
-  <code>string</code>,
-  `The full URL or path leading to the user management interface.`,
-  ],
-  },
-  {
-  cells: [
-  <code>afterSignOutUrl</code>,
-  <code>string</code>,
-  "The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps)",
-  ],
-  },
-  {
-  cells: [
-  <code>afterMultiSessionSingleSignOutUrl</code>,
-  <code>string</code>,
-  "The full URL or path to navigate to after a signing out from currently active account (multisession apps).",
-  ],
-  },
-  {
-  cells: [
-  <code>afterSwitchSessionUrl</code>,
-  <code>string</code>,
-  "Full URL or path to navigate to after a successful account change (multi-session apps).",
-  ],
-  },
-  {
-  cells: [
-  <code>defaultOpen</code>,
-  <code>string</code>,
-  <>Controls whether the <code>{"<UserButton/>"}</code> should open by default during the first render.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>userProfileProps</code>,
-  <code>object</code>,
-  <>
-  Specify options for the underlying {"<UserProfile />"} component.
-  <br/>
-  e.g. <code>{"{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}"}</code>
-  </>,
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | `object` | Controls the overall look and feel. |
+| `showName` | `string` | Controls if the user name is displayed next to the user image button. |
+| `signInUrl` | `string` | The full URL or path to navigate to when the "Add another account" button is clicked. |
+| `userProfileMode` | `"modal" \| "navigation"` | Controls whether clicking the "Manage your account" button will cause the `<UserProfile />` component to open as a modal, or if the browser will navigate to the `userProfileUrl` where `<UserProfile />` is mounted as a page. |
+| `userProfileUrl` | `string` | The full URL or path leading to the user management interface. |
+| `afterSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps). |
+| `afterMultiSessionSingleSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from currently active account (multisession apps). |
+| `afterSwitchSessionUrl` | `string` | Full URL or path to navigate to after a successful account change (multi-session apps). |
+| `defaultOpen` | `string` | Controls whether the `<UserButton/>` should open by default during the first render. |
+| `userProfileProps` | `object` | Specify options for the underlying `<UserProfile />` component.<br />e.g. `additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}` |
