--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -7,7 +7,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# Session
+# `Session`
 
 The `Session` object is an abstraction over an HTTP session. It models the period of information exchange between a user and the server.
 
@@ -106,7 +106,7 @@ function getToken(options?: GetTokenOptions): Promise<string | null>;
 
 Retrieves the user's session token for the given template or the default clerk token. This method uses a cache so a network request will only be made if the token in memory has expired. The TTL for clerk token is one minute.
 
-#### GetTokenOptions
+#### `GetTokenOptions`
 
 <Tables
   headings={["Name", "Type", "Description"]}
@@ -132,7 +132,7 @@ Retrieves the user's session token for the given template or the default clerk t
 
 ## Types
 
-### PublicUserData
+### `PublicUserData`
 
 
 <Tables
@@ -146,7 +146,7 @@ Retrieves the user's session token for the given template or the default clerk t
   ]}
 />
 
-### SessionStatus
+### `SessionStatus`
 
 ```typescript
 type SessionStatus = "abandoned" | "active" | "ended" | "expired" | "removed" | "replaced" | "revoked";
