--- a/docs/references/javascript/sign-in/authenticate-with.mdx
+++ b/docs/references/javascript/sign-in/authenticate-with.mdx
@@ -29,7 +29,7 @@ Signs in users via OAuth. This is commonly known as Single Sign On (SSO), where 
   rows={[{cells: [
         <code>strategy</code>,
         <code>string</code>,
-        <>The OAuth provider that will be used for singing in. Must be one of the supported <a href="#o-auth-strategy"><code>OAuthStrategy</code></a>.</>
+        <>The OAuth provider that will be used for signing in. Must be one of the supported <a href="#o-auth-strategy"><code>OAuthStrategy</code></a>.</>
     ]}, {cells: [
         <code>redirectUrl</code>,
         <code>string</code>,
@@ -139,7 +139,7 @@ type OAuthStrategy = |
 "oauth_notion";
 ```
 
-The OAuth provider that will be used for singing in. Must be one of the supported OAuthStrategy.
+The OAuth provider that will be used for signing in. Must be one of the supported OAuthStrategy.
 
 <Tables
   headings={['Name', 'Type', 'Description']}
