--- a/docs/references/javascript/sign-up/verification.mdx
+++ b/docs/references/javascript/sign-up/verification.mdx
@@ -38,7 +38,7 @@ The `prepareVerification` is used to initiate the verification process for a fie
         <li><strong><code>email_code</code></strong>: Send an email with a unique token to input.</li>
         <li><strong><code>email_link</code></strong>: Send an email with a link which validates sign-up</li>
         <li><strong><code>saml</code></strong>: Authenticate against SAML. Experimental</li>
-        <li><strong><code>oauth_*</code></strong>: Authenticate against <a href="/docs/authentication/social-connections/overview">various OAuth providers</a>.</li>
+        <li><strong><code>oauth_*</code></strong>: Authenticate against <a href="/docs/references/javascript/sign-in/authenticate-with#o-auth-strategy">various OAuth providers</a>.</li>
         <li><strong><code>web3_*_signature</code></strong>: Authenticate against Web3 signatures.</li>
       </ul>
       </>
