--- a/docs/references/nextjs/trpc.mdx
+++ b/docs/references/nextjs/trpc.mdx
@@ -73,8 +73,7 @@ To use Clerk in your tRPC context, you will need to use our server helper [`getA
 ```ts
 import * as trpc from '@trpc/server';
 import * as trpcNext from '@trpc/server/adapters/next';
-import { getAuth } from '@clerk/nextjs/server';
-import type { SignedInAuthObject,SignedOutAuthObject } from '@clerk/nextjs/server';
+import { getAuth, SignedInAuthObject, SignedOutAuthObject } from '@clerk/nextjs/server';
 
 interface AuthContext {
   auth: SignedInAuthObject | SignedOutAuthObject;
