--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -530,6 +530,6 @@ export default function UnSafePage() {
 
 ### Retrieving unsafe metadata
 
-There are multiple ways to retrieve unsafe metadata. It is available in the `User` object returned by the `useUser` hook, and it can also be attached to the session token to be retrieved with `auth()`, `useAuth()`. If you need to retrieve unsafe metadata frequently in the backend. The best option is to attach it to the session token and retrieve it from the session token.
+There are multiple ways to retrieve unsafe metadata. It is available in the `User` object returned by the `useUser` hook, and it can also be attached to the session token to be retrieved with `auth()` or `useAuth()`. If you need to retrieve unsafe metadata frequently in the backend. The best option is to attach it to the session token and retrieve it from the session token.
 
-To read about customization your session token and retrieving that data check out our [session token customization guide](/docs/advanced-usage/custom-session-token).
+To read about customization your session token and retrieving that data, check out our [session token customization guide](/docs/advanced-usage/custom-session-token).
