--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -132,8 +132,7 @@ ReactDOM.render(
         <code>allowedRedirectOrigins?</code>,
         <code>{`Array<string | RegExp>`}</code>,
         <>Optional array of domains used to validate against the query param of an auth redirect.
-        <br/>
-        If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.</>,
+        <br/>If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.</>,
       ],
     },
   ]}
