--- a/docs/components/control/signed-in.mdx
+++ b/docs/components/control/signed-in.mdx
@@ -6,7 +6,7 @@ description: Conditionally render content only when a user is signed in.
 import { Callout } from "nextra-theme-docs";
 import { Tab, Tabs } from "nextra-theme-docs";
 
-# `<SignedIn>`
+# `<SignedIn />`
 
 ## Overview
 The `<SignedIn />` component offers authentication checks as a cross-cutting concern. Any children components wrapped by a `<SignedIn />` component will be rendered only if there's a User with an active Session signed in your application.
