--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -75,7 +75,7 @@ export default function RootLayout({
   return (
     <ClerkProvider>
       <html lang="en">
-        <body className={inter.className}>{children}</body>
+        <body>{children}</body>
       </html>
     </ClerkProvider>
   )
@@ -158,7 +158,7 @@ In addition to the Account Portal, Clerk also offers a set of [prebuilt componen
 
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
-  ```tsx copy filename="app/sign-in/page.tsx"
+  ```tsx copy filename="/pages/sign-in/[[...index]].tsx"
   import { SignIn } from "@clerk/nextjs";
 
   export default function Page() {
@@ -166,7 +166,7 @@ In addition to the Account Portal, Clerk also offers a set of [prebuilt componen
   }
   ```
 
-  ```tsx copy filename="/pages/sign-in/[[...index]].tsx"
+  ```tsx copy filename="app/sign-in/page.tsx"
   import { SignIn } from "@clerk/nextjs";
 
   export default function Page() {
@@ -304,11 +304,12 @@ export default function handler(req: NextApiRequest, res: NextApiResponse) {
 }
 ```
 
-In some cases, you may need the full [`User`](/docs/references/javascript/user/user) object. For example, if you want to access the user's email address or name. You can use the `clerkClient` helper to get the full `User` object.
+In some cases, you may need the full [`User`](/docs/references/javascript/user/user) object. For example, if you want to access the user's email address or name. You can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full `User` object.
 
 
 ```tsx copy filename="pages/api/auth.ts"
-import { getAuth, clerkClient } from "@clerk/nextjs/server";
+import { clerkClient } from "@clerk/nextjs";
+import { getAuth } from "@clerk/nextjs/server";
 import type { NextApiRequest, NextApiResponse } from "next";
 
 export default async function handler(
@@ -340,7 +341,7 @@ export default async function handler(
     Under the hood, this calls `fetch()` so it is automatically deduped per request.
 
     ```tsx copy filename="page.tsx"
-    import { currentUser } from "@clerk/nextjs/app-beta";
+    import { currentUser } from "@clerk/nextjs";
     import type { User } from "@clerk/nextjs/api";
 
     export default async function Page() {
@@ -356,7 +357,7 @@ export default async function handler(
     Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a `Request` object to Clerk.
 
     ```tsx copy filename="app/page.tsx"
-    import { auth } from '@clerk/nextjs/app-beta';
+    import { auth } from '@clerk/nextjs';
 
     export default function Page() {
       const { userId } : { userId: string | null } = auth();
@@ -391,7 +392,8 @@ export default async function handler(
     You can also access the full user object before passing it to the page using the `clerkClient` helper.
 
     ```tsx copy filename="pages/example.tsx"
-    import { clerkClient, getAuth, buildClerkProps } from "@clerk/nextjs/server";
+    import { clerkClient } from "@clerk/nextjs";
+    import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
     import { GetServerSideProps } from "next";
 
     export const getServerSideProps: GetServerSideProps = async (ctx) => {
