--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -3,11 +3,6 @@ title: Session Methods
 description: These are all methods on the Clerk class that help you manage the active session and/or organization.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
-
 # Session Methods
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you manage the active session and/or organization.
@@ -34,41 +29,16 @@ If an active session already exists, it will be replaced with the new one. The c
 ### Props
 
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>session</code>,
-  <code><a href="/docs/references/javascript/session">Session</a> | string | null</code>,
-  <>A <code><a href="/docs/references/javascript/session">Session</a></code> object or <code>Session ID</code> string to be set as the current session, or <strong>null</strong> to simply remove the active session, without setting a new one.</>,
-  ],
-  },
-    {
-  cells: [
-  <code>beforeEmit?</code>,
-  <code>(session: <a href="/docs/references/javascript/session">Session</a> | null) {"=>"} Promise{"<any>"}</code>,
-  <>Callback that will trigger when the current session is set to <strong>undefined</strong>, before finally being set to the passed session. Usually used for navigation.</>,
-  ],
-  }
-  ]}
-/>
-
+| Name | Type | Description |
+| --- | --- | --- |
+| `session` | [`Session`](/docs/references/javascript/session) \| `string` \| `null` | A `Session` object or `Session ID` string to be set as the current session, or **null** to simply remove the active session, without setting a new one. |
+| `beforeEmit?` | `(session: Session \| null) => Promise<any>` | Callback that will trigger when the current session is set to **undefined**, before finally being set to the passed session. Usually used for navigation. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>{"Promise<void>"}</code>,
-  <>The <code>Promise</code> will resolve after the passed <code>session</code> is set.</>,
-  ]},
-  ]}
-/>
-
+| Type | Description |
+| --- | --- |
+| `Promise<void>` | The `Promise` will resolve after the passed `session` is set. |
 
 ## `setActive()`
 
@@ -86,46 +56,14 @@ An **experimental** method used to set the active session and/or organization.
 
 ### `SetActiveParams`
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>session</code>,
-  <code>Session | string | null</code>,
-  <>The session resource or session id (string version) to be set as active. If <code>null</code>, the current session is deleted.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>organization</code>,
-  <code><a href="/docs/references/javascript/organization/organization">Organization</a> | string | null</code>,
-  <>The organization resource or organization id (string version) to be set as active in the current session. If <code>null</code>, the currently active organization is removed as active.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>beforeEmit</code>,
-  <code>(session?: <a href="/docs/references/javascript/session">Session</a> | null) {"=> void | Promise<any>"}</code>,
-  <>Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions.</>,
-  ],
-  },
-  
-  ]}
-/>
-
+| Name | Type | Description |
+| --- | --- | --- |
+| `session` | `Session` \| `string` \| `null` | The session resource or session id (string version) to be set as active. If `null`, the current session is deleted. |
+| `organization` | [`Organization`](/docs/references/javascript/organization/organization) \| `string` \| `null` | The organization resource or organization id (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
+| `beforeEmit?` | `(session?: Session \| null) => void \| Promise<any>` | Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>{"Promise<void>"}</code>,
-  <>The <code>Promise</code> will resolve after the passed <code>session</code> or <code>organization</code> is set.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<void>` | The `Promise` will resolve after the passed `session` or `organization` is set. |
