--- a/docs/references/javascript/client.mdx
+++ b/docs/references/javascript/client.mdx
@@ -7,7 +7,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# Client
+# `Client`
 
 The `Client` object keeps track of the authenticated sessions in the current device. The device can be a browser, a native application or any other medium that is usually the requesting part in a request/response architecture.
 
