--- a/docs/references/javascript/email-address/email-address.mdx
+++ b/docs/references/javascript/email-address/email-address.mdx
@@ -13,7 +13,7 @@ The EmailAddress object is a model around an email address. Email addresses are 
 
 Email addresses must be verified to ensure that they can be assigned to their rightful owners. The EmailAddress object holds all necessary state around the verification process.
 
-The verification process always starts with the EmailAddress.prepareVerification() method, which will send a one-time verification code via an email message. The second and final step involves an attempt to complete the verification by calling the EmailAddress.attemptVerification() method, passing the one-time code as a parameter.
+The verification process always starts with the [EmailAddress.prepareVerification()](,/docs/references/javascript/email-address/verification#prepare-verification) method, which will send a one-time verification code via an email message. The second and final step involves an attempt to complete the verification by calling the [EmailAddress.attemptVerification()](/docs/references/javascript/email-address/verification#attempt-verification) method, passing the one-time code as a parameter.
 
 Finally, email addresses can be linked to other identifications.
 
