--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -7,7 +7,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# Organization
+# `Organization`
 
 This is a class that represents an organization. It's returned from the [`createOrganization`](/docs/references/javascript/clerk/create-organization) and [`getOrganization`](/docs/references/javascript/clerk/organization-methods) methods on [the `Clerk` class instance](/docs/references/javascript/clerk/clerk).
 
