--- a/docs/references/javascript/session-with-activities.mdx
+++ b/docs/references/javascript/session-with-activities.mdx
@@ -45,7 +45,7 @@ Users can revoke only their own sessions.
 
 ## Types
 
-### SessionActivity
+### `SessionActivity`
 
 <Tables
     headings={["Name", "Type", "Description"]}
@@ -64,7 +64,7 @@ Users can revoke only their own sessions.
 
 
 
-### SessionStatus
+### `SessionStatus`
 
 ```typescript
 type SessionStatus = "abandoned" | "active" | "ended" | "expired" | "removed" | "replaced" | "revoked";
