--- a/docs/references/nextjs/build-clerk-props.mdx
+++ b/docs/references/nextjs/build-clerk-props.mdx
@@ -52,7 +52,8 @@ export const getServerSideProps: GetServerSideProps = async (ctx) => {
 The `clerkClient` allows you to access the Clerk API. You can use this to retrieve or update data.
 
 ```tsx filename="pages/api/example.ts" copy
-import { clerkClient, getAuth, buildClerkProps } from "@clerk/nextjs/server";
+import { clerkClient } from "@clerk/nextjs";
+import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
 import { GetServerSideProps } from "next";
 
 export const getServerSideProps: GetServerSideProps = async (ctx) => {
