--- a/docs/references/nextjs/with-clerk-middleware.mdx
+++ b/docs/references/nextjs/with-clerk-middleware.mdx
@@ -21,7 +21,7 @@ The `withClerkMiddleware` wrapper allows Clerk to access session data on the ser
 This is the minimal amount of code needed to use Clerk Server Side helpers.
 
 ```tsx filename="middleware.ts" copy
-import { withClerkMiddleware } from "@clerk/nextjs/server";
+import { withClerkMiddleware } from "@clerk/nextjs";
 import { NextResponse } from "next/server";
 import type { NextRequest } from "next/server";
 
@@ -48,7 +48,8 @@ export const config = {
 #### Usage with page protection
 
 ```tsx filename="middleware.ts" copy
-import { withClerkMiddleware, getAuth } from "@clerk/nextjs/server";
+import { withClerkMiddleware } from "@clerk/nextjs";
+import { getAuth } from "@clerk/nextjs/server";
 import { NextResponse } from "next/server";
 import type { NextRequest } from "next/server";
 
