--- a/docs/references/react/use-session-list.mdx
+++ b/docs/references/react/use-session-list.mdx
@@ -55,33 +55,9 @@ export default function Home() {
 ```
 </CodeBlockTabs>
 
-<Tables
-  headings={["Variables", "Description"]}
-  headingsMeta={[{}, {maxWidth:'300px'}]}
-  rows={[
-    {
-      cells: [
-        "isLoaded",
-        "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true",
-      ],
-    },
-    {
-      cells: [
-        "setActive",
-        "A function that sets the active session, is most cases this should be used over setSession()",
-      ],
-    },
-    {
-      cells: [
-        "setSession",
-        "A function that sets the active session, this should",
-      ],
-    },
-    {
-      cells: [
-        "sessions",
-        "Holds an array of Session objects that have been registered on the client device",
-      ],
-    },
-  ]}
-/>
+| Values | Description |
+| --- | --- |
+| `isLoaded` | A boolean that is set to false until Clerk loads and initializes. |
+| `setActive()` | A function that sets the active session. In most cases, this should be used over setSession(). |
+| `setSession()` | A function that sets the active session. |
+| `sessions` | Holds an array of `Session` objects that have been registered on the client device. |
