--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -178,21 +178,10 @@ The `useSignUp` hook gives you access to the `SignUp` object, which allows you t
   </Tab>
 </Tabs>
 
-<Tables
-  headings={["Variables", "Description"]}
-  headingsMeta={[{}, {maxWidth:'300px'}]}
-  rows={[
-  {
-  cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
-  },
-  {
-  cells: ["setActive", "A function that sets the active session, is most cases this should be used over setSession()"]
-  },
-  {
-  cells: ["setSession", "A function that sets the active session, this should"]
-  },
-  {
-  cells: ["signUp", "An object that contains the current sign up attempt status and methods to create a new sign up attempt."]
-  },
-  ]}
-/>
+| Values | Description |
+| --- | --- |
+| `isLoaded` | A boolean that is set to false until Clerk loads and initializes. |
+| `setActive()` | A function that sets the active session. In most cases, this should be used over setSession(). |
+| `setSession()` | A function that sets the active session. |
+| `signUp` | An object that contains the current sign up attempt status and methods to create a new sign up attempt. |
+
